<resources>
    <string name="app_name">Sit Means Sit</string>

    <string name="home">Home</string>
    <string name="request_consultation">Request Consultation</string>
    <string name="calendar">Calendar</string>

    <!-- REQUEST CONSULTATION -->
    <string name="name">Name</string>
    <string name="zip_code">Zip Code</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="best_time_to_contact">Best Time To Contact</string>
    <string name="mornings">Mornings</string>
    <string name="afternoons">Afternoons</string>
    <string name="evenings">Evenings (after 5pm)</string>
    <string name="anytime">Anytime</string>
    <string name="submit">Submit</string>
    <string name="clear">Clear</string>

    <!-- CALENDAR -->


    <string name="generic_error">There was an error while completing your request. Please try again later.</string>
</resources>
