<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include
            layout="@layout/app_toolbar"/>

        <android.support.design.widget.CoordinatorLayout
            android:id="@+id/coordinator"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="@dimen/activity_vertical_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/name_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/name_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/name_layout"
                    android:hint="@string/email">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/email_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:nextFocusDown="@+id/phone_input"
                        android:nextFocusRight="@+id/phone_input"/>
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:id="@+id/phone_zip_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/email_layout">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/phone_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:hint="@string/phone">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/phone_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="phone"
                            android:maxLength="14"
                            android:nextFocusDown="@+id/zip_input"
                            android:nextFocusRight="@+id/zip_input"
                            tools:hint="@string/phone"/>
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/zip_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight=".5"
                        android:hint="@string/zip_code">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/zip_input"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            android:maxLength="5"
                            tools:hint="@string/zip_code"/>
                    </android.support.design.widget.TextInputLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/best_time_label"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone_zip_layout"
                    android:layout_marginLeft="4dp"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/best_time_to_contact"
                    android:textSize="18sp"/>

                <RadioGroup
                    android:id="@+id/best_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/best_time_label"
                    android:checkedButton="@+id/mornings"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/mornings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/mornings"/>

                    <RadioButton
                        android:id="@+id/afternoons"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/afternoons"/>

                    <RadioButton
                        android:id="@+id/evenings"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/evenings"/>

                    <RadioButton
                        android:id="@+id/anytime"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="@string/anytime"/>

                </RadioGroup>

                <Button
                    android:id="@+id/submit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/best_time"
                    android:layout_marginTop="8dp"
                    android:text="@string/submit"/>

            </RelativeLayout>

        </android.support.design.widget.CoordinatorLayout>

    </LinearLayout>

    <include
        layout="@layout/nav_drawer"/>
</android.support.v4.widget.DrawerLayout>